=======
CHANGES
=======

1.0.0a3 (unreleased)
--------------------

- Remove some deprecated ftest dependencies.


1.0.0a2 (2013-02-28)
--------------------

- Adjust ``MANIFEST.in`` to include all templates as well.


1.0.0a1 (2013-02-27)
--------------------

- Added support for Python 3.3.


0.6.0 (2009-11-29)
------------------

- adjust imports, reflect changes in zope packages

- Fix error in the template when ``allowSearch`` attribute of
  the view is set to False and there's no search form.


0.5.0 (2008-04-13)
------------------

- Refactored the search implementation. Now it's very easy to customize the
  search. The offered z3c.table.interfaces.IValue adapter based search allows
  us to implement any kind of search patters for any context and table
  combination.

- Merged search branch back to trunk

- Initial Release