@@ -1,6 +1,7 @@
+# this is a namespace package
 try:
-    # Declare this a namespace package if pkg_resources is available.
     import pkg_resources
-    pkg_resources.declare_namespace('z3c')
+    pkg_resources.declare_namespace(__name__)
 except ImportError:
-    pass
+    import pkgutil
+    __path__ = pkgutil.extend_path(__path__, __name__)
