@@ -5,6 +5,8 @@ CHANGES
 1.0.0a3 (unreleased)
 --------------------
 
+- Standardize namespace __init__
+
 - Remove some deprecated ftest dependencies.
 
 
